# wasm-boa

./: .gitignore  Cargo.toml  build.sh
backend/: Cargo.toml
backend/src/: actix_based_main.rs  client.rs  server.rs
boa-web/: index.html  index.js  package-lock.json  package.json  style.css  two_players.js  webpack.config.js
boa-web/static/: index.html  style.css
boalib/: Cargo.toml  LICENSE  README.md  create_deployment.sh
boalib/src/: connmanager.rs  lib.rs
boalib/src/ai/: mod.rs
frontend/boa-web/: favicon.piko  index.js  package-lock.json  two_players.js
frontend/boa-web/static/: index.html  two_players.html
src/: lib.rs  main.rs
src/ai/: mod.rs
